<resources>
    <string name="app_name">M03_Bounce</string>
    <string name="enter_name">BallName</string>
    <string name="add">Add</string>
    <string name="enter_a_ball_name">Enter a ball name</string>
    <string name="_12">12</string>
    <string name="enter_a_ball_x">Enter a ball X</string>
    <string name="enter_a_ball_y">Enter a ball Y</string>
    <string name="_14">14</string>
    <string name="enter_a_ball_dx">Enter a ball DX</string>
    <string name="_22">22</string>
    <string name="enter_a_ball_dy">Enter a ball DY</string>
    <string name="_44">44</string>
    <string name="enter_a_color">Enter a color</string>
    <string name="blue">Blue</string>
    <string name="clear">Clear</string>
</resources>